started implementing generalized initialization of components from parameters.